# smart-parking-system

./: .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SOURCE_CODE_REFERENCE.md  TECHNICAL_SPECIFICATION.md  test.cpp
backend/: .gitignore  CMakeLists.txt  FINAL_CHECKLIST.txt  GITHUB_SETUP.md  PROJECT_COMPLETE_SUMMARY.txt  build.ps1  build_http.bat  build_http.ps1  crow.h  http_server.cpp  main.cpp  simple_http_server.cpp  test_allocator.cpp  test_analytics.cpp  test_main.cpp  test_parking_area.cpp  test_parking_slot.cpp  test_pathfinder.cpp  test_request.cpp  test_rollback.cpp  test_vehicle.cpp  test_zone.cpp  verify.ps1
backend/frontend/: index.html
backend/include/: AllocationEngine.h  Analytics.h  ParkingArea.h  ParkingRequest.h  ParkingSlot.h  ParkingSystem.h  PathFinder.h  RollbackManager.h  Vehicle.h  Zone.h
backend/src/: AllocationEngine.cpp  Analytics.cpp  ParkingArea.cpp  ParkingRequest.cpp  ParkingSlot.cpp  ParkingSystem.cpp  PathFinder.cpp  RollbackManager.cpp  Vehicle.cpp  Zone.cpp
frontend/: index.html  index.html.backup
